2006-01-21  Hans Breuer  <hans@breuer.org>

	* sheets/AADL.sheet.in : remove left over xml:lang tag. 
	( Nguyen Thai Ngoc Duy, bug #327519)

	* lib/dialibartrenderer.c : make text rendering work without
	PangoFT2 and PangoWin32

2006-01-18  Lars Clausen  <lars@raeder.dk>

	* objects/UML/class.h: Enabling UML class mainpoint after failure
	to break it.

	* app/grid.c: Fix bug with grid being incorrectly drawn when gap <
	1.

2006-01-14  Hans Breuer  <hans@breuer.org>

	* app/paginate_psprint.c : ensure we are not producing pages for
	epsilon. Floating imprecision is fun. Fixes bug #133856.
	* app/paginate_gdiprint.cpp : same here.

	* plug-ins/pstricks/render_pstricks.c(draw_string) : now that I've
	found the nice samples from bug #156171 it was quite simple to
	confirm that the y value need indeed to be inverted. Fixes bug #304974.
	Also special case strings starting with \tex - i.e. dont escape them -
	to keep the use-case of direct tex input.
	
	* lib/debug.c : #include <glib/gprintf.h> not just <gprintf.h>

2006-01-14  Hans Breuer  <hans@breuer.org>

	* samples/Self/umlclass.dia : (new file) documenting part of the
	object relations of UMLClass. Also good for testing connections.
	
	* lib/debug.c : replace wrong call to vprintf() - missing file
	descriptor - with the more appropriate g_vprintf(). Thus 
	dia_assert_true() does not smash the stack anymore on win32.
	
	* objects/UML/class.c objects/UML/class_dialog.c objects/UML/uml.h
	  objects/UML/umlattribute.c objects/UML/umloperation.c :
	reverted the memory managment of UMLAttribute/UMLOperation's 
	ConnectionPoint(s) back to how it was up until 0.94. This finally
	makes the UMLClass work again including undo/redo support. Fixes
	bug #314153 and en passant bug #326453.
	
2005-01-12  Lars Clausen  <lars@raeder.dk>

	* objects/UML/umlattribute.c: 
	* objects/UML/class_dialog.c: Better way of handling
	connectionpoints: Don't copy them, just reference them.  Finally
	fixes bug #314153 (not quite the pi bug:)
